--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"> 
-    <title>Black Boys Code | Pokémon card component</title>
+    <title>Pokémon HTML Challenges | Black Boys Code</title>
   </head>
   <body>
-  
+    <h1>Hello Kanto</h1>
   </body>
 </html>
