--- a/index.html
+++ b/index.html
@@ -3,16 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/img/favicon-32x32.png"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+    <link rel="manifest" href="/assets/img/site.webmanifest">
+    <link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#6fb43f">
+    <link rel="shortcut icon" href="/assets/img/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Blackboyscode">
+    <meta name="application-name" content="Blackboyscode">
+    <meta name="msapplication-TileColor" content="#6fb43f">
+    <meta name="msapplication-config" content="/assets/img/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="styles.css" />
     <title>Pokémon HTML Challenges | Black Boys Code</title>
   </head>
   <body>
-    <h1>Hello Kanto</h1>
+    <header>
+        <h1>Hello Kanto</h1>
+    </header>
+    <body>
+
+    </body>
+    <footer>
+
+    </footer>
   </body>
 </html>
