--- a/index.html
+++ b/index.html
@@ -19,13 +19,29 @@
   </head>
   <body>
     <header>
-        <h1>Hello Kanto</h1>
+        <h1>Hi Chloe</h1>
     </header>
-    <body>
+    <main>
+      <ul>
+         <li>
+          <h2>Pikachu</h2>
+          <img src="assets/img/Pokemon/pikachu.png">
+          <p>Mew</p>
+         </li>
+        <li>
+          <h2>Pikachu</h2>
+          <img src="assets/img/Pokemon/Phanpy.png">
+        </li>
+         <li>
+          <h2>Eevee</h2>
+          <img src="assets/img/Pokemon/Eevee.png">
+         </li>
+       </ul>
+      </main>
 
     </body>
     <footer>
 
     </footer>
   </body>
-</html>
+</html>Þ
